--- a/app/src/main/res/layout/activity_edit_observation.xml
+++ b/app/src/main/res/layout/activity_edit_observation.xml
@@ -16,7 +16,7 @@
             android:layout_height="wrap_content"
             android:inputType="textPersonName"
             android:ems="10"
-            android:id="@+id/editText" android:hint="@string/addedit_surgery_hint"/>
+            android:id="@+id/editText" android:hint="@string/addedit_surgery_hint" android:onClick="onActionChanged"/>
     <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
